# EnguagePic

./: CMakeLists.txt  CustomDelegate.cpp  CustomDelegate.h  ImagePreviewer.cpp  ImagePreviewer.h  MainScene.cpp  MainScene.h  MarkerTable.cpp  MarkerTable.h  README.md  ScreenCapture.h  Style.cpp  Style.h  main.cpp  resources.qrc
res/: app_icon.rc
src/: AxisCurveList.cpp  AxisCurveList.h  CustomDelegate.cpp  DataModel.cpp  DataModel.h  ImagePreviewer.cpp  ImagePreviewer.h  MainScene.cpp  MainScene.h  MarkerTable.cpp  MarkerTable.h  ScreenCapture.cpp  Style.cpp  main.cpp
